/*
 * $Id: ChangeLog,v 1.4503 2005/10/24 15:55:38 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-10-24 9:58 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/pp/ppcore.c
    * Added 2 sets of missing ()

2005-10-24 17:54 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbtypes.h
  * xharbour/source/vm/maindllp.c
    * cleaned DLL declaration for extended API

2005-10-24 15:10 UTC+0200 Francesco Saverio Giudice <info@fsgiudice.com>
  + contrib/gd

 /*
    Added GD wrapper library.
    Please look at README.txt and ChangeLog in /contrib/gd for
    further informations.
 */


2005-10-23 22:20 UTC-0800 Brian Hays <bhays at abacuslaw.com>
  * source/rtl/persist.prg
    ! Added 3rd arg lPropertiesOnly to ::LoadFromText()
      // for objects with a long lifetime that may call this multiple times,
      // you may not want non-Property ivars cleared
      Default behavior is identical to prior version; if you pass .t.
      then ONLY (and ALL) Properties are re-initialized then set to any
      stored values.

2005-10-23 21:45 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/pp/ppcore.c
    * Minor optimizations, and correction related to E"..." in hb_pp_NextToken()
    * Few more fixes to places where double escape \\ was not tested when testing for \

2005-10-24 06:00 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/contrib/libnf/Makefile
    + added missing fttext.c
  * xharbour/contrib/libnf/fttext.c
    * GCC warning cleaned

  * xharbour/contrib/xwt/Rules.make
  * xharbour/contrib/xwt/src/xwt_gtk/xwt_calendar.c
  * xharbour/contrib/xwt/src/xwt_gtk/xwt_gtk.c
  * xharbour/contrib/xwt/src/xwt_gtk/xwt_gtk_browse.c
  * xharbour/contrib/xwt/src/xwt_gtk/xwt_gtk_calendar.c
  * xharbour/contrib/xwt/src/xwt_gtk/xwt_gtk_checkbox.c